# freezer-dr

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  CREDITS.rst  ChangeLog  HACKING.rst  README.rst  bindep.txt  development hints  evacuate.py  ipmitool.py  lower-constraints.txt  monitor.py  osclient.py  osha.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
config-generator/: freezer-dr.conf  osha.conf
doc/: osha_diagram.xml
doc/source/: conf.py  index.rst
doc/source/_static/: test.css
doc/source/contributor/: contributing.rst
etc/: freezer-dr.conf.sample  osha.conf  osha.conf.sample  servers.yml
etc/templates/: error.jinja  original.jinja  success.jinja  user_error.jinja  user_success.jinja
freezer_dr/: __init__.py  main.py
freezer_dr/common/: config.py  daemon.py  osclient.py  utils.py  yaml_parser.py
freezer_dr/evacuators/common/: driver.py  manager.py  utils.py
freezer_dr/evacuators/drivers/default/: standard.py
freezer_dr/evacuators/drivers/dummy/: dummy.py
freezer_dr/fencers/common/: driver.py  manager.py
freezer_dr/fencers/drivers/ipmi/: driver.py  ipmitool.py
freezer_dr/fencers/drivers/libvirt/: driver.py
freezer_dr/monitors/common/: driver.py  manager.py
freezer_dr/monitors/drivers/default/: driver.py
freezer_dr/monitors/drivers/dummy/: driver.py
freezer_dr/monitors/drivers/monasca/: driver.py
freezer_dr/notifiers/common/: driver.py  manager.py
freezer_dr/notifiers/drivers/default/: default_email.py
freezer_dr/notifiers/drivers/slack/: slack.py
osha/: __init__.py  evacuate.py  main.py  monitor.py  oshad.py  yaml_parser.py
osha/common/: __init__.py  config.py  daemon.py  osclient.py  utils.py
osha/evacuators/common/: driver.py  manager.py  utils.py
osha/evacuators/drivers/dummy/: dummy.py
osha/evacuators/drivers/osha/: standard.py
osha/fencers/common/: driver.py  manager.py
osha/fencers/drivers/ipmi/: driver.py
osha/fencers/drivers/libvirt/: driver.py
osha/fencors/common/: driver.py  manager.py
osha/fencors/drivers/ipmi/: driver.py  ipmitool.py
osha/monitors/common/: driver.py  manager.py
osha/monitors/drivers/dummy/: driver.py
osha/monitors/drivers/osha/: __init__.py  driver.py
osha/notifiers/common/: __init__.py  manager.py
osha/notifiers/drivers/: __init__.py
osha/notifiers/drivers/osha/: default_email.py
releasenotes/notes/: drop-py-2-7-7c6101f30ffd8c71.yaml
tests/unit/common/: test_yaml_parser.py
