[metadata]
name = Freezer DR
version = 0.1
summary = OpenStack Disaster Recovery
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    freezer_dr

[global]
setup-hooks =
    pbr.hooks.setup_hook


[pbr]
warnerrors = True


[entry_points]
oslo.config.opts =
    freezer-dr = freezer_dr.common.config:list_opts
console_scripts =
    freezer-dr = freezer_dr.main:main