[metadata]
name = freezer-dr
version = 1.0
summary = OpenStack Disaster Recovery
description-file =
    README.rst
author = Freezer Team
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Freezer
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: System :: Recovery Tools

keywords =
    openstack
    freezer
    disaster
    recovery
    evacuation
    high availability
    dr

[files]
packages =
    freezer_dr

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True


[entry_points]
oslo.config.opts =
    freezer-dr = freezer_dr.common.config:list_opts
console_scripts =
    freezer-dr = freezer_dr.main:main