[metadata]
name = freezer-dr
summary = OpenStack Disaster Recovery
description-file =
    README.rst
author = Freezer Team
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/freezer/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: System :: Recovery Tools

keywords =
    openstack
    freezer
    disaster
    recovery
    evacuation
    high availability
    dr

[files]
packages =
    freezer_dr

[entry_points]
oslo.config.opts =
    freezer-dr = freezer_dr.common.config:list_opts
console_scripts =
    freezer-dr = freezer_dr.main:main
